--- a/app/views/tags/show.html.haml
+++ b/app/views/tags/show.html.haml
@@ -5,7 +5,7 @@
 
 - @site_layout = "site" unless @blogs.empty?
 
-.latest
+.tag
   %h1= @tag
   .timeline{ :data => { :widget => "sugar" } }
     = render :partial => "posts/post_full", :collection => @posts, :as => :post
