--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -288,11 +288,13 @@ a.logo
   .z_name
     word-wrap: break-word        
 
+.latest, .tag
+  h1
+    margin: 30px 0px
+    color: #009fff
 .latest
   h1
     float: left
-    margin: 30px 0px
-    color: #009fff
   .z_nav
     float: left
     margin: 33px 20px 27px 20px
